# BLE_BeaconHCI

./: .extSettings  .instructions.md  .mxproject  BLE_BeaconHCI.ioc  CMakeLists.txt  STM32WBA65xx_FLASH.ld  STM32WBA65xx_RAM.ld
Application/Inc/: app_tick.h
Application/Src/: app_tick.c
Core/Inc/: app_common.h  app_conf.h  app_tick.h  main.h  stm32wbaxx_hal_conf.h  stm32wbaxx_it.h
Core/Src/: app_entry.c  app_tick.c  main.c  stm32wbaxx_hal_msp.c  stm32wbaxx_it.c
Drivers/STM32WBAxx_HAL_Driver/Inc/: stm32wbaxx_hal.h  stm32wbaxx_hal_cryp.h  stm32wbaxx_hal_flash.h  stm32wbaxx_hal_lptim.h  stm32wbaxx_hal_rng_ex.h  stm32wbaxx_ll_rng.h
Drivers/STM32WBAxx_HAL_Driver/Src/: stm32wbaxx_hal_cryp.c  stm32wbaxx_hal_flash.c  stm32wbaxx_hal_lptim.c  stm32wbaxx_hal_rng.c  stm32wbaxx_hal_rng_ex.c
EWARM/: BLE_BeaconHCI.ewp
MDK-ARM/: BLE_BeaconHCI.uvoptx  BLE_BeaconHCI.uvprojx
Middlewares/ST/STM32_WPAN/ble/stack/include/: ble_bufsize.h  ble_defs.h  ble_legacy.h
Middlewares/ST/STM32_WPAN/ble/stack/include/auto/: ble_events.h  ble_gap_aci.h  ble_gatt_aci.h  ble_gen_aci.h  ble_hal_aci.h  ble_hci_le.h  ble_l2cap_aci.h  ble_raw_api.h  ble_types.h  ble_wrap.c
Middlewares/ST/STM32_WPAN/link_layer/ll_cmd_lib/config/ble_full/: ll_fw_config.h
Middlewares/ST/STM32_WPAN/link_layer/ll_cmd_lib/inc/: bsp.h  common_types.h  dtm.h  event_manager.h  evnt_schdlr_gnrc_if.h  hci.h  ll_error.h  ll_intf.h  ll_intf_cmn.h  mac_host_intf.h  mem_intf.h  os_wrapper.h  platform.h  power_table.h  pta.h  ral.h  rfd_dev_config.h
Middlewares/ST/STM32_WPAN/link_layer/ll_cmd_lib/inc/_40nm_reg_files/: DWC_ble154combo.h
Middlewares/ST/STM32_WPAN/link_layer/ll_cmd_lib/inc/ot_inc/: crypto.h  error.h  instance.h  logging.h  radio.h  toolchain.h  types.h
Middlewares/ST/STM32_WPAN/link_layer/ll_sys/inc/: ll_sys_startup.h  ll_version.h
Middlewares/ST/STM32_WPAN/link_layer/ll_sys/src/: ll_sys_startup.c
Projects/Common/WPAN/Interfaces/: adv_trace_usart_if.c  adv_trace_usart_if.h  app_bsp.h  hw_rng.c
Projects/Common/WPAN/Modules/: app_sys.c  app_sys.h  scm.c  wpan_utils.c  wpan_utils.h
Projects/Common/WPAN/Modules/Log/: log_module.c  log_module.h
Projects/Common/WPAN/Modules/MemoryManager/: advanced_memory_manager.c  advanced_memory_manager.h
Projects/Common/WPAN/Modules/RTDebug/: RTDebug_dtb.c  debug_signals.h  local_debug_tables.h
STM32CubeIDE/: .cproject  .project
STM32_WPAN/App/: app_ble.c
System/Config/: common_wpan_conf.h
System/Config/Debug_GPIO/: app_debug.c  debug_config.h
System/Config/LowPower/: peripheral_init.c
System/Modules/: ble_timer.c  ble_timer.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
